looks like the marmaid might be on a good way

--- a/Class-diagram-history-for-Confluence/manifest.yml
+++ b/Class-diagram-history-for-Confluence/manifest.yml
@@ -19,4 +19,7 @@ permissions:
     fetch:
       backend:
         - "*.github.com"
+  content:
+    styles:
+      - 'unsafe-inline'
   scopes: [read:sprint:jira-software]
