--- a/Class-diagram-history-for-Confluence/static/hello-world/package.json
+++ b/Class-diagram-history-for-Confluence/static/hello-world/package.json
@@ -5,9 +5,11 @@
   "homepage": ".",
   "dependencies": {
     "@atlaskit/button": "^16.2.2",
-    "@atlaskit/css-reset": "^6.0.1",
+    "@atlaskit/css-reset": "^6.3.10",
+    "@atlaskit/form": "^8.5.3",
+    "@atlaskit/select": "^15.2.11",
     "@forge/bridge": "^2.2.0",
-    "grommet": "^2.22.0",
+    "@forge/ui": "^1.1.0",
     "mermaid": "^9.0.0",
     "polished": "^4.2.2",
     "react": "^16.13.1",
