custom UI update

--- a/Class-diagram-history-for-Confluence/manifest.yml
+++ b/Class-diagram-history-for-Confluence/manifest.yml
@@ -21,5 +21,17 @@ permissions:
         - "*.github.com"
   content:
     styles:
-      - 'unsafe-inline'
-  scopes: [read:sprint:jira-software]
+      - unsafe-inline
+  scopes:
+    - read:issue-type:jira
+    - read:project:jira
+    - read:project.property:jira
+    - read:user:jira
+    - read:application-role:jira
+    - read:avatar:jira
+    - read:group:jira
+    - read:issue-type-hierarchy:jira
+    - read:project-category:jira
+    - read:project-version:jira
+    - read:project.component:jira
+    - read:sprint:jira-software
