--- a/Class-diagram-history-for-Confluence/static/hello-world/package.json
+++ b/Class-diagram-history-for-Confluence/static/hello-world/package.json
@@ -11,6 +11,7 @@
     "@atlaskit/select": "^15.2.11",
     "@forge/bridge": "^2.2.0",
     "@forge/ui": "^1.1.0",
+    "date-fns": "^2.28.0",
     "mermaid": "^9.0.0",
     "polished": "^4.2.2",
     "react": "^16.13.1",
