--- a/Class-diagram-history-for-Confluence/static/hello-world/package.json
+++ b/Class-diagram-history-for-Confluence/static/hello-world/package.json
@@ -4,17 +4,23 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
+    "@atlaskit/avatar": "^20.5.8",
     "@atlaskit/button": "^16.2.2",
     "@atlaskit/css-reset": "^6.3.10",
     "@atlaskit/datetime-picker": "^11.1.8",
     "@atlaskit/form": "^8.5.3",
     "@atlaskit/select": "^15.2.11",
+    "@atlaskit/tag": "^11.3.1",
+    "@atlaskit/tag-group": "^10.0.11",
+    "@atlaskit/tooltip": "^17.5.7",
     "@forge/bridge": "^2.2.0",
     "@forge/ui": "^1.1.0",
+    "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
     "mermaid": "^9.0.0",
     "polished": "^4.2.2",
     "react": "^16.13.1",
+    "react-bootstrap": "^2.2.3",
     "react-dom": "^16.13.1",
     "react-scripts": "^5.0.0",
     "styled-components": "^5.3.5"
