--- a/Class-diagram-history-for-Confluence/static/hello-world/package.json
+++ b/Class-diagram-history-for-Confluence/static/hello-world/package.json
@@ -9,6 +9,7 @@
     "@atlaskit/css-reset": "^6.3.10",
     "@atlaskit/datetime-picker": "^11.1.8",
     "@atlaskit/form": "^8.5.3",
+    "@atlaskit/icon-object": "^6.2.6",
     "@atlaskit/select": "^15.2.11",
     "@atlaskit/tag": "^11.3.1",
     "@atlaskit/tag-group": "^10.0.11",
@@ -22,6 +23,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^2.2.3",
     "react-dom": "^16.13.1",
+    "react-horizontal-scrolling-menu": "^2.7.1",
     "react-scripts": "^5.0.0",
     "styled-components": "^5.3.5"
   },
