UI and UX fixes. Testing simulated environment

--- a/Class-diagram-history-for-Confluence/manifest.yml
+++ b/Class-diagram-history-for-Confluence/manifest.yml
@@ -19,6 +19,9 @@ permissions:
     fetch:
       backend:
         - "*.github.com"
+    images:
+      - '*.githubusercontent.com'
+      - '*.gravatar.com'
   content:
     styles:
       - unsafe-inline
